--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -11,7 +11,7 @@
             <% end %>
   </p>
 <div class="row">
-  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+  <div class="col-xs-12 col-sm-12 col-md-6">
     <div class="card text-center">
       <div class="card-header">
         History
