--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -17,7 +17,7 @@
           History
         </div>
         <div class="card-block">
-          <table class="table table-responsive table-striped table-inverse">
+          <table class="table table-responsive table-sm table-striped table-inverse">
             <thead>
               <tr>
                 <th>Date of Purchased</th>
