--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -20,9 +20,9 @@
           <table class="table table-responsive table-sm table-striped table-inverse">
             <thead>
               <tr>
-                <th>Date of Purchased</th>
-                <th>Purchased By</th>
-                <th>Updated By</th>
+                <th>Date</th>
+                <th>Purchased</th>
+                <th>Updated</th>
                 <th>Price</th>
               </tr>
             </thead>
