--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -17,12 +17,12 @@
           History
         </div>
         <div class="card-block">
-          <table class="table table-responsive table-sm table-striped table-inverse">
+          <table class="table table-sm table-bordered table-inverse">
             <thead>
               <tr>
                 <th>Date</th>
                 <th>Purchased</th>
-                <th>Updated</th>
+                <th class="hidden-xs hidden-sm">Updated</th>
                 <th>Price</th>
               </tr>
             </thead>
@@ -35,7 +35,7 @@
                   <td>
                     <%= splitwise.purchasee.first_name%>
                   </td>
-                  <td>
+                  <td class="hidden-xs hidden-sm">
                     <%= splitwise.creator.first_name%>
                   </td>
                   <td>
