--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -94,43 +94,50 @@
               </table>
             </div>
             <div class="card-footer">
-            <span class="badge badge-success">
+              <span class="badge badge-success">
               Total :<%= total_expense%>
             </span>
-
             </div>
           </div>
     </div>
-  </div>
-  <div class='analytics-mid'>
-    <div class='analytics-mid-inner'>
-      <table>
-        <thead>
-          <tr>
-            <th> Name</th>
-            <th> Spend Amount</th>
-            <th> Bill Amount</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% User.billable(@date_time).each do |user| %>
-            <tr>
-              <td>
-                <%= user.first_name%>
-              </td>
-              <%spent_amount = user.spent_amount(@date_time)%>
-                <td>
-                  <%= user.spent_amount(@date_time)%>
-                </td>
-                <td>
-                  <%= per_head_cost - spent_amount%>
-                </td>
-            </tr>
-            <% end %>
-        </tbody>
-      </table>
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 ">
+      <div class="card text-center mx-auto">
+        <div class="card-header">
+          <h2>Summary</h2>
+        </div>
+        <div class="card-block">
+          <table class="table table-sm table-responsive">
+            <thead>
+              <tr>
+                <th> Name</th>
+                <th> Spend Amount</th>
+                <th> Bill Amount</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% User.billable(@date_time).each do |user| %>
+                <tr>
+                  <td>
+                    <%= user.first_name%>
+                  </td>
+                  <%spent_amount = user.spent_amount(@date_time)%>
+                    <td>
+                      <%= user.spent_amount(@date_time)%>
+                    </td>
+                    <td>
+                      <%= per_head_cost - spent_amount%>
+                    </td>
+                </tr>
+                <% end %>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-footer">
+          <span class="badge badge-success">
+          </span>
+        </div>
+      </div>
     </div>
   </div>
-  <div style="clear:both;"></div>
 </div>
 </div>
