--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -13,8 +13,8 @@
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 ">
       <div class="card mx-auto">
-        <div class="card-header">
-          History
+        <div class="card-header text-center">
+          <h2>History</h2>
         </div>
         <div class="card-block">
           <table class="table table-sm table-responsive">
@@ -45,11 +45,13 @@
                 <% end %>
             </tbody>
           </table>
+          <div class="text-center">
           <%if @monthly_purchase.size > 3%>
             <%= link_to 'For more details visit', splitwises_path, class: 'btn btn-success'%>
               <%end%>
+          </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
           <h3>
           <span class="badge badge-success">
             Total :
@@ -63,8 +65,8 @@
       <% total_expense = @monthly_purchase.total_expense%>
         <% per_head_cost = (total_expense/User.billable(@date_time).count).to_f %>
           <div class="card mx-auto">
-            <div class="card-header">
-              Source based report
+            <div class="card-header text-center">
+              <h2>Source based report</h2>
             </div>
             <div class="card-block">
               <table class="table table-sm table-responsive">
@@ -95,7 +97,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="card-footer">
+            <div class="card-footer text-center">
               <h3>
               <span class="badge badge-success">
               Total :<%= total_expense%>
