--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -1,7 +1,7 @@
 <p id="notice">
   <%= notice %>
 </p>
-<div class="container">
+<div class="container-fluid">
   <h1>Expense Log</h1>
   <p>
     <%= form_tag analysis_splitwises_path, method: 'get' do %>
@@ -11,7 +11,7 @@
             <% end %>
   </p>
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 ">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-5 ">
       <div class="card mx-auto">
         <div class="card-header text-center">
           <h2>History</h2>
@@ -61,6 +61,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix visible-xs-block"></div>
     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 ">
       <% total_expense = @monthly_purchase.total_expense%>
         <% per_head_cost = (total_expense/User.billable(@date_time).count).to_f %>
@@ -106,6 +107,7 @@
             </div>
           </div>
     </div>
+    <div class="clearfix visible-xs-block"></div>
     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 ">
       <div class="card mx-auto">
         <div class="card-header">
