--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -107,11 +107,10 @@
             </div>
           </div>
     </div>
-  </div>
-  <div class="row">
+    <div class="clearfix visible-xs-block"></div>
     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 ">
       <div class="card mx-auto">
-        <div class="card-header text-center">
+        <div class="card-header">
           <h2>Summary</h2>
         </div>
         <div class="card-block">
