--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -100,6 +100,7 @@
               Total :<%= total_expense%>
             </span>
             </h3>
+            Per Head : <%= per_head_cost%>
             </div>
           </div>
     </div>
@@ -114,8 +115,8 @@
             <thead>
               <tr>
                 <th> Name</th>
-                <th> Spend Amount</th>
-                <th> Bill Amount</th>
+                <th> Spend</th>
+                <th> Payable</th>
               </tr>
             </thead>
             <tbody>
@@ -129,7 +130,7 @@
                       <%= user.spent_amount(@date_time)%>
                     </td>
                     <td>
-                      <%= per_head_cost - spent_amount%>
+                      <%= (per_head_cost - spent_amount).round(2)%>
                     </td>
                 </tr>
                 <% end %>
