--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -11,7 +11,7 @@
             <% end %>
   </p>
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 ">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 mb-3">
       <div class="card mx-auto">
         <div class="card-header text-center">
           <h2>History</h2>
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="clearfix visible-xs-block"></div>
-    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 ">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 mb-3">
       <% total_expense = @monthly_purchase.total_expense%>
         <% per_head_cost = (total_expense/User.billable(@date_time).count).to_f.round(2) %>
           <div class="card mx-auto">
@@ -105,7 +105,7 @@
           </div>
     </div>
     <div class="clearfix visible-xs-block"></div>
-    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 ">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 mb-3">
       <div class="card mx-auto">
         <div class="card-header">
           <h2>Summary</h2>
