--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -11,12 +11,12 @@
             <% end %>
   </p>
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 mb-3">
-      <div class="card mx-auto">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 mb-3">
+      <div class="card">
         <div class="card-header text-center">
           <h2>History</h2>
         </div>
-        <div class="card-block">
+        <div class="card-block mx-auto">
           <table class="table table-sm table-responsive">
             <thead>
               <tr>
@@ -56,14 +56,14 @@
       </div>
     </div>
     <div class="clearfix visible-xs-block"></div>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 mb-3">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 mb-3">
       <% total_expense = @monthly_purchase.total_expense%>
         <% per_head_cost = (total_expense/User.billable(@date_time).count).to_f.round(2) %>
-          <div class="card mx-auto">
+          <div class="card">
             <div class="card-header text-center">
               <h2>Source based report</h2>
             </div>
-            <div class="card-block">
+            <div class="card-block mx-auto">
               <table class="table table-sm table-responsive">
                 <thead>
                   <tr>
@@ -101,12 +101,12 @@
           </div>
     </div>
     <div class="clearfix visible-xs-block"></div>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 mb-3">
-      <div class="card mx-auto">
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 mb-3">
+      <div class="card">
         <div class="card-header">
           <h2>Summary</h2>
         </div>
-        <div class="card-block">
+        <div class="card-block mx-auto">
           <table class="table table-sm table-responsive">
             <thead>
               <tr>
