--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
               <div class="dropdown-divider"></div>
               <%= link_to 'Analytics', analysis_splitwises_path, class: 'dropdown-item'%>
               <div class="dropdown-divider"></div>
+              <%= link_to 'Penalties', penalties_path, class: 'dropdown-item'%>
+              <div class="dropdown-divider"></div>
               <%= link_to('Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'dropdown-item') %>
             </div>
           </li>
