--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,7 +11,7 @@
 			      </th>
 		      </tr>
 		      <tr>
-	        	<td class='rules-text' colspan="4">RULES: <%= event.rules%> </td>
+	        	<td class='rules-text' colspan="4">RULES: <%= event.rules.html_safe%> </td>
 	        </tr>
 	    </table>
 	    <table>
