pie chart implementation

--- a/app/views/splitwises/analysis.html.erb
+++ b/app/views/splitwises/analysis.html.erb
@@ -94,7 +94,7 @@
                           <%= spent_amount%>
                         </td>
                     </tr>
-                    <% end %>
+                  <% end %>
                 </tbody>
               </table>
             </div>
@@ -165,6 +165,11 @@
       </div>
     </div>
   </div>
+
+  <%= high_chart("investment", @chart) do |c| %>
+    <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}"  %>
+    <%= raw "options.plotOptions.pie.dataLabels.formatter = function() { if (this.y > 5) return this.point.name; }"  %>
+  <% end %>
 </div>
 
 <script type="text/javascript">
