--- a/app/views/penalties/index.html.erb
+++ b/app/views/penalties/index.html.erb
@@ -6,7 +6,7 @@
     <p>
       <%= form_tag penalties_path, method: 'get' do %>
          <%= select_month(@date_time || Date.today) %>
-         <%= select_year(@date_time || Date.today, :start_year => Date.today.year, :end_year => 8.years.from_now.year) %>
+         <%= select_year(@date_time || Date.today, :start_year => 2017, :end_year => 8.years.from_now.year) %>
          <%= submit_tag "Apply"%>
       <% end %>
     </p>
